COMPILADOR FASE 2 SIN TERMINAR/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    CORCHETEDER
    CORCHETEIZQ
    DIFERENTE
    DOSPUNTOS
    IGUAL_IGUAL
    MAYOR
    MAYOR_IGUAL
    MENOR
    MENOR_IGUAL
    NEGACION
    OR
    PUNTO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_funciones
Rule 2     lista_funciones -> funcion
Rule 3     lista_funciones -> funcion lista_funciones
Rule 4     funcion -> INICIO PARENIZQ PARENDER bloque
Rule 5     funcion -> FUNCION IDENTIFICADOR PARENIZQ lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito
Rule 6     lista_params -> <empty>
Rule 7     lista_params -> params_no_vacios
Rule 8     params_no_vacios -> param
Rule 9     params_no_vacios -> param COMA params_no_vacios
Rule 10    param -> tipo IDENTIFICADOR
Rule 11    tipo -> NUMERO
Rule 12    tipo -> DECIMAL
Rule 13    tipo -> BOOLEANO
Rule 14    tipo -> CADENA
Rule 15    bloque -> LLAVEIZQ sentencias LLAVEDER
Rule 16    abrir_ambito_funcion -> <empty>
Rule 17    abrir_ambito -> <empty>
Rule 18    cerrar_ambito -> <empty>
Rule 19    sentencias -> sentencia
Rule 20    sentencias -> sentencia sentencias
Rule 21    sentencia -> tipo IDENTIFICADOR IGUAL expresion PUNTOYCOMA
Rule 22    sentencia -> tipo IDENTIFICADOR PUNTOYCOMA
Rule 23    sentencia -> IDENTIFICADOR OP_ASIG expresion PUNTOYCOMA
Rule 24    OP_ASIG -> IGUAL
Rule 25    OP_ASIG -> SUMA_IGUAL
Rule 26    OP_ASIG -> RESTA_IGUAL
Rule 27    OP_ASIG -> MULT_IGUAL
Rule 28    OP_ASIG -> DIV_IGUAL
Rule 29    sentencia -> IDENTIFICADOR PARENIZQ args PARENDER PUNTOYCOMA
Rule 30    args -> <empty>
Rule 31    args -> lista_args
Rule 32    lista_args -> expresion
Rule 33    lista_args -> expresion COMA lista_args
Rule 34    expresion -> expresion SUMA expresion
Rule 35    expresion -> expresion RESTA expresion
Rule 36    expresion -> expresion MULT expresion
Rule 37    expresion -> expresion DIV expresion
Rule 38    expresion -> expresion MOD expresion
Rule 39    expresion -> PARENIZQ expresion PARENDER
Rule 40    expresion -> literal
Rule 41    expresion -> IDENTIFICADOR
Rule 42    expresion -> llamada_funcion_expr
Rule 43    literal -> NUMERO
Rule 44    literal -> DECIMAL
Rule 45    literal -> CADENA
Rule 46    literal -> VERDADERO
Rule 47    literal -> FALSO
Rule 48    llamada_funcion_expr -> IDENTIFICADOR PARENIZQ args PARENDER
Rule 49    sentencia -> SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
Rule 50    sentencia -> SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito SINO abrir_ambito bloque cerrar_ambito
Rule 51    sentencia -> MIENTRAS PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
Rule 52    sentencia -> REPETIR abrir_ambito bloque cerrar_ambito HASTA PARENIZQ expresion PARENDER PUNTOYCOMA
Rule 53    sentencia -> PARA PARENIZQ for_init PUNTOYCOMA expresion PUNTOYCOMA for_update PARENDER abrir_ambito bloque cerrar_ambito
Rule 54    for_init -> tipo IDENTIFICADOR IGUAL expresion
Rule 55    for_init -> IDENTIFICADOR OP_ASIG expresion
Rule 56    for_init -> empty
Rule 57    for_update -> IDENTIFICADOR OP_ASIG expresion
Rule 58    for_update -> empty
Rule 59    empty -> <empty>
Rule 60    sentencia -> MOSTRAR PARENIZQ expresion PARENDER PUNTOYCOMA
Rule 61    sentencia -> REGRESA expresion PUNTOYCOMA
Rule 62    sentencia -> expresion PUNTOYCOMA
Rule 63    sentencia -> BREAK PUNTOYCOMA
Rule 64    sentencia -> CONTINUE PUNTOYCOMA

Terminals, with rules where they appear

AND                  : 
BOOLEANO             : 13
BREAK                : 63
CADENA               : 14 45
COMA                 : 9 33
CONTINUE             : 64
CORCHETEDER          : 
CORCHETEIZQ          : 
DECIMAL              : 12 44
DIFERENTE            : 
DIV                  : 37
DIV_IGUAL            : 28
DOSPUNTOS            : 
FALSO                : 47
FUNCION              : 5
HASTA                : 52
IDENTIFICADOR        : 5 10 21 22 23 29 41 48 54 55 57
IGUAL                : 21 24 54
IGUAL_IGUAL          : 
INICIO               : 4
LLAVEDER             : 15
LLAVEIZQ             : 15
MAYOR                : 
MAYOR_IGUAL          : 
MENOR                : 
MENOR_IGUAL          : 
MIENTRAS             : 51
MOD                  : 38
MOSTRAR              : 60
MULT                 : 36
MULT_IGUAL           : 27
NEGACION             : 
NUMERO               : 11 43
OR                   : 
PARA                 : 53
PARENDER             : 4 5 29 39 48 49 50 51 52 53 60
PARENIZQ             : 4 5 29 39 48 49 50 51 52 53 60
PUNTO                : 
PUNTOYCOMA           : 21 22 23 29 52 53 53 60 61 62 63 64
REGRESA              : 61
REPETIR              : 52
RESTA                : 35
RESTA_IGUAL          : 26
SI                   : 49 50
SINO                 : 50
SUMA                 : 34
SUMA_IGUAL           : 25
VERDADERO            : 46
error                : 

Nonterminals, with rules where they appear

OP_ASIG              : 23 55 57
abrir_ambito         : 49 50 50 51 52 53
abrir_ambito_funcion : 5
args                 : 29 48
bloque               : 4 5 49 50 50 51 52 53
cerrar_ambito        : 5 49 50 50 51 52 53
empty                : 56 58
expresion            : 21 23 32 33 34 34 35 35 36 36 37 37 38 38 39 49 50 51 52 53 54 55 57 60 61 62
for_init             : 53
for_update           : 53
funcion              : 2 3
lista_args           : 31 33
lista_funciones      : 1 3
lista_params         : 5
literal              : 40
llamada_funcion_expr : 42
param                : 8 9
params_no_vacios     : 7 9
programa             : 0
sentencia            : 19 20
sentencias           : 15 20
tipo                 : 10 21 22 54

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_funciones
    (2) lista_funciones -> . funcion
    (3) lista_funciones -> . funcion lista_funciones
    (4) funcion -> . INICIO PARENIZQ PARENDER bloque
    (5) funcion -> . FUNCION IDENTIFICADOR PARENIZQ lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito

    INICIO          shift and go to state 4
    FUNCION         shift and go to state 5

    programa                       shift and go to state 1
    lista_funciones                shift and go to state 2
    funcion                        shift and go to state 3

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_funciones .

    $end            reduce using rule 1 (programa -> lista_funciones .)


state 3

    (2) lista_funciones -> funcion .
    (3) lista_funciones -> funcion . lista_funciones
    (2) lista_funciones -> . funcion
    (3) lista_funciones -> . funcion lista_funciones
    (4) funcion -> . INICIO PARENIZQ PARENDER bloque
    (5) funcion -> . FUNCION IDENTIFICADOR PARENIZQ lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito

    $end            reduce using rule 2 (lista_funciones -> funcion .)
    INICIO          shift and go to state 4
    FUNCION         shift and go to state 5

    funcion                        shift and go to state 3
    lista_funciones                shift and go to state 6

state 4

    (4) funcion -> INICIO . PARENIZQ PARENDER bloque

    PARENIZQ        shift and go to state 7


state 5

    (5) funcion -> FUNCION . IDENTIFICADOR PARENIZQ lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito

    IDENTIFICADOR   shift and go to state 8


state 6

    (3) lista_funciones -> funcion lista_funciones .

    $end            reduce using rule 3 (lista_funciones -> funcion lista_funciones .)


state 7

    (4) funcion -> INICIO PARENIZQ . PARENDER bloque

    PARENDER        shift and go to state 9


state 8

    (5) funcion -> FUNCION IDENTIFICADOR . PARENIZQ lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito

    PARENIZQ        shift and go to state 10


state 9

    (4) funcion -> INICIO PARENIZQ PARENDER . bloque
    (15) bloque -> . LLAVEIZQ sentencias LLAVEDER

    LLAVEIZQ        shift and go to state 12

    bloque                         shift and go to state 11

state 10

    (5) funcion -> FUNCION IDENTIFICADOR PARENIZQ . lista_params PARENDER abrir_ambito_funcion bloque cerrar_ambito
    (6) lista_params -> .
    (7) lista_params -> . params_no_vacios
    (8) params_no_vacios -> . param
    (9) params_no_vacios -> . param COMA params_no_vacios
    (10) param -> . tipo IDENTIFICADOR
    (11) tipo -> . NUMERO
    (12) tipo -> . DECIMAL
    (13) tipo -> . BOOLEANO
    (14) tipo -> . CADENA

    PARENDER        reduce using rule 6 (lista_params -> .)
    NUMERO          shift and go to state 17
    DECIMAL         shift and go to state 18
    BOOLEANO        shift and go to state 19
    CADENA          shift and go to state 20

    lista_params                   shift and go to state 13
    params_no_vacios               shift and go to state 14
    param                          shift and go to state 15
    tipo                           shift and go to state 16

state 11

    (4) funcion -> INICIO PARENIZQ PARENDER bloque .

    INICIO          reduce using rule 4 (funcion -> INICIO PARENIZQ PARENDER bloque .)
    FUNCION         reduce using rule 4 (funcion -> INICIO PARENIZQ PARENDER bloque .)
    $end            reduce using rule 4 (funcion -> INICIO PARENIZQ PARENDER bloque .)


state 12

    (15) bloque -> LLAVEIZQ . sentencias LLAVEDER
    (19) sentencias -> . sentencia
    (20) sentencias -> . sentencia sentencias
    (21) sentencia -> . tipo IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (22) sentencia -> . tipo IDENTIFICADOR PUNTOYCOMA
    (23) sentencia -> . IDENTIFICADOR OP_ASIG expresion PUNTOYCOMA
    (29) sentencia -> . IDENTIFICADOR PARENIZQ args PARENDER PUNTOYCOMA
    (49) sentencia -> . SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
    (50) sentencia -> . SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito SINO abrir_ambito bloque cerrar_ambito
    (51) sentencia -> . MIENTRAS PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
    (52) sentencia -> . REPETIR abrir_ambito bloque cerrar_ambito HASTA PARENIZQ expresion PARENDER PUNTOYCOMA
    (53) sentencia -> . PARA PARENIZQ for_init PUNTOYCOMA expresion PUNTOYCOMA for_update PARENDER abrir_ambito bloque cerrar_ambito
    (60) sentencia -> . MOSTRAR PARENIZQ expresion PARENDER PUNTOYCOMA
    (61) sentencia -> . REGRESA expresion PUNTOYCOMA
    (62) sentencia -> . expresion PUNTOYCOMA
    (63) sentencia -> . BREAK PUNTOYCOMA
    (64) sentencia -> . CONTINUE PUNTOYCOMA
    (11) tipo -> . NUMERO
    (12) tipo -> . DECIMAL
    (13) tipo -> . BOOLEANO
    (14) tipo -> . CADENA
    (34) expresion -> . expresion SUMA expresion
    (35) expresion -> . expresion RESTA expresion
    (36) expresion -> . expresion MULT expresion
    (37) expresion -> . expresion DIV expresion
    (38) expresion -> . expresion MOD expresion
    (39) expresion -> . PARENIZQ expresion PARENDER
    (40) expresion -> . literal
    (41) expresion -> . IDENTIFICADOR
    (42) expresion -> . llamada_funcion_expr
    (43) literal -> . NUMERO
    (44) literal -> . DECIMAL
    (45) literal -> . CADENA
    (46) literal -> . VERDADERO
    (47) literal -> . FALSO
    (48) llamada_funcion_expr -> . IDENTIFICADOR PARENIZQ args PARENDER

    IDENTIFICADOR   shift and go to state 24
    SI              shift and go to state 27
    MIENTRAS        shift and go to state 28
    REPETIR         shift and go to state 29
    PARA            shift and go to state 30
    MOSTRAR         shift and go to state 31
    REGRESA         shift and go to state 32
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 34
    NUMERO          shift and go to state 35
    DECIMAL         shift and go to state 36
    BOOLEANO        shift and go to state 19
    CADENA          shift and go to state 37
    PARENIZQ        shift and go to state 26
    VERDADERO       shift and go to state 40
    FALSO           shift and go to state 41

    sentencias                     shift and go to state 21
    sentencia                      shift and go to state 22
    tipo                           shift and go to state 23
    expresion                      shift and go to state 25
    literal                        shift and go to state 38
    llamada_funcion_expr           shift and go to state 39

state 13

    (5) funcion -> FUNCION IDENTIFICADOR PARENIZQ lista_params . PARENDER abrir_ambito_funcion bloque cerrar_ambito

    PARENDER        shift and go to state 42


state 14

    (7) lista_params -> params_no_vacios .

    PARENDER        reduce using rule 7 (lista_params -> params_no_vacios .)


state 15

    (8) params_no_vacios -> param .
    (9) params_no_vacios -> param . COMA params_no_vacios

    PARENDER        reduce using rule 8 (params_no_vacios -> param .)
    COMA            shift and go to state 43


state 16

    (10) param -> tipo . IDENTIFICADOR

    IDENTIFICADOR   shift and go to state 44


state 17

    (11) tipo -> NUMERO .

    IDENTIFICADOR   reduce using rule 11 (tipo -> NUMERO .)


state 18

    (12) tipo -> DECIMAL .

    IDENTIFICADOR   reduce using rule 12 (tipo -> DECIMAL .)


state 19

    (13) tipo -> BOOLEANO .

    IDENTIFICADOR   reduce using rule 13 (tipo -> BOOLEANO .)


state 20

    (14) tipo -> CADENA .

    IDENTIFICADOR   reduce using rule 14 (tipo -> CADENA .)


state 21

    (15) bloque -> LLAVEIZQ sentencias . LLAVEDER

    LLAVEDER        shift and go to state 45


state 22

    (19) sentencias -> sentencia .
    (20) sentencias -> sentencia . sentencias
    (19) sentencias -> . sentencia
    (20) sentencias -> . sentencia sentencias
    (21) sentencia -> . tipo IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (22) sentencia -> . tipo IDENTIFICADOR PUNTOYCOMA
    (23) sentencia -> . IDENTIFICADOR OP_ASIG expresion PUNTOYCOMA
    (29) sentencia -> . IDENTIFICADOR PARENIZQ args PARENDER PUNTOYCOMA
    (49) sentencia -> . SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
    (50) sentencia -> . SI PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito SINO abrir_ambito bloque cerrar_ambito
    (51) sentencia -> . MIENTRAS PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
    (52) sentencia -> . REPETIR abrir_ambito bloque cerrar_ambito HASTA PARENIZQ expresion PARENDER PUNTOYCOMA
    (53) sentencia -> . PARA PARENIZQ for_init PUNTOYCOMA expresion PUNTOYCOMA for_update PARENDER abrir_ambito bloque cerrar_ambito
    (60) sentencia -> . MOSTRAR PARENIZQ expresion PARENDER PUNTOYCOMA
    (61) sentencia -> . REGRESA expresion PUNTOYCOMA
    (62) sentencia -> . expresion PUNTOYCOMA
    (63) sentencia -> . BREAK PUNTOYCOMA
    (64) sentencia -> . CONTINUE PUNTOYCOMA
    (11) tipo -> . NUMERO
    (12) tipo -> . DECIMAL
    (13) tipo -> . BOOLEANO
    (14) tipo -> . CADENA
    (34) expresion -> . expresion SUMA expresion
    (35) expresion -> . expresion RESTA expresion
    (36) expresion -> . expresion MULT expresion
    (37) expresion -> . expresion DIV expresion
    (38) expresion -> . expresion MOD expresion
    (39) expresion -> . PARENIZQ expresion PARENDER
    (40) expresion -> . literal
    (41) expresion -> . IDENTIFICADOR
    (42) expresion -> . llamada_funcion_expr
    (43) literal -> . NUMERO
    (44) literal -> . DECIMAL
    (45) literal -> . CADENA
    (46) literal -> . VERDADERO
    (47) literal -> . FALSO
    (48) llamada_funcion_expr -> . IDENTIFICADOR PARENIZQ args PARENDER

    LLAVEDER        reduce using rule 19 (sentencias -> sentencia .)
    IDENTIFICADOR   shift and go to state 24
    SI              shift and go to state 27
    MIENTRAS        shift and go to state 28
    REPETIR         shift and go to state 29
    PARA            shift and go to state 30
    MOSTRAR         shift and go to state 31
    REGRESA         shift and go to state 32
    BREAK           shift and go to state 33
    CONTINUE        shift and go to state 34
    NUMERO          shift and go to state 35
    DECIMAL         shift and go to state 36
    BOOLEANO        shift and go to state 19
    CADENA          shift and go to state 37
    PARENIZQ        shift and go to state 26
    VERDADERO       shift and go to state 40
    FALSO           shift and go to state 41

    sentencia                      shift and go to state 22
    sentencias                     shift and go to state 46
    tipo                           shift and go to state 23
    expresion                      shift and go to state 25
    literal                        shift and go to state 38
    llamada_funcion_expr           shift and go to state 39

state 23

    (21) sentencia -> tipo . IDENTIFICADOR IGUAL expresion PUNTOYCOMA
    (22) sentencia -> tipo . IDENTIFICADOR PUNTOYCOMA

    IDENTIFICADOR   shift and go to state 47


state 24

    (23) sentencia -> IDENTIFICADOR . OP_ASIG expresion PUNTOYCOMA
    (29) sentencia -> IDENTIFICADOR . PARENIZQ args PARENDER PUNTOYCOMA
    (41) expresion -> IDENTIFICADOR .
    (48) llamada_funcion_expr -> IDENTIFICADOR . PARENIZQ args PARENDER
    (24) OP_ASIG -> . IGUAL
    (25) OP_ASIG -> . SUMA_IGUAL
    (26) OP_ASIG -> . RESTA_IGUAL
    (27) OP_ASIG -> . MULT_IGUAL
    (28) OP_ASIG -> . DIV_IGUAL

    PARENIZQ        shift and go to state 49
    PUNTOYCOMA      reduce using rule 41 (expresion -> IDENTIFICADOR .)
    SUMA            reduce using rule 41 (expresion -> IDENTIFICADOR .)
    RESTA           reduce using rule 41 (expresion -> IDENTIFICADOR .)
    MULT            reduce using rule 41 (expresion -> IDENTIFICADOR .)
    DIV             reduce using rule 41 (expresion -> IDENTIFICADOR .)
    MOD             reduce using rule 41 (expresion -> IDENTIFICADOR .)
    IGUAL           shift and go to state 50
    SUMA_IGUAL      shift and go to state 51
    RESTA_IGUAL     shift and go to state 52
    MULT_IGUAL      shift and go to state 53
    DIV_IGUAL       shift and go to state 54

    OP_ASIG                        shift and go to state 48

state 25

    (62) sentencia -> expresion . PUNTOYCOMA
    (34) expresion -> expresion . SUMA expresion
    (35) expresion -> expresion . RESTA expresion
    (36) expresion -> expresion . MULT expresion
    (37) expresion -> expresion . DIV expresion
    (38) expresion -> expresion . MOD expresion

    PUNTOYCOMA      shift and go to state 55
    SUMA            shift and go to state 56
    RESTA           shift and go to state 57
    MULT            shift and go to state 58
    DIV             shift and go to state 59
    MOD             shift and go to state 60


state 26

    (39) expresion -> PARENIZQ . expresion PARENDER
    (34) expresion -> . expresion SUMA expresion
    (35) expresion -> . expresion RESTA expresion
    (36) expresion -> . expresion MULT expresion
    (37) expresion -> . expresion DIV expresion
    (38) expresion -> . expresion MOD expresion
    (39) expresion -> . PARENIZQ expresion PARENDER
    (40) expresion -> . literal
    (41) expresion -> . IDENTIFICADOR
    (42) expresion -> . llamada_funcion_expr
    (43) literal -> . NUMERO
    (44) literal -> . DECIMAL
    (45) literal -> . CADENA
    (46) literal -> . VERDADERO
    (47) literal -> . FALSO
    (48) llamada_funcion_expr -> . IDENTIFICADOR PARENIZQ args PARENDER

    PARENIZQ        shift and go to state 26
    IDENTIFICADOR   shift and go to state 62
    NUMERO          shift and go to state 63
    DECIMAL         shift and go to state 64
    CADENA          shift and go to state 65
    VERDADERO       shift and go to state 40
    FALSO           shift and go to state 41

    expresion                      shift and go to state 61
    literal                        shift and go to state 38
    llamada_funcion_expr           shift and go to state 39

state 27

    (49) sentencia -> SI . PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito
    (50) sentencia -> SI . PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito SINO abrir_ambito bloque cerrar_ambito

    PARENIZQ        shift and go to state 66


state 28

    (51) sentencia -> MIENTRAS . PARENIZQ expresion PARENDER abrir_ambito bloque cerrar_ambito

    PARENIZQ        shift and go to state 67


state 29

    (52) sentencia -> REPETIR . abrir_ambito bloque cerrar_ambito HASTA PARENIZQ expresion PARENDER PUNTOYCOMA
    (17) abrir_ambito -> .

    LLAVEIZQ        reduce using rule 17 (abrir_ambito -> .)

    abrir_ambito                   shift and go to state 68

state 30

    (53) sentencia -> PARA . PARENIZQ for_init PUNTOYCOMA expresion PUNTOYCOMA for_update PARENDER abrir_ambito bloque cerrar_ambito

    PARENIZQ        shift and go to state 69


state 31

    (60) sentencia -> MOSTRAR . PARENIZQ expresion PARENDER PUNTOYCOMA

    PARENIZQ        shift and go to state 70


state 32

    (61) sentencia -> REGRESA . expresion PUNTOYCOMA
    (34) expresion -> . expresion SUMA expresion
    (35) expresion -> . expresion RESTA expresion
    (36) expresion -> . expresion MULT expresion
    (37) expresion -> . expresion DIV expresion
    (38) expresion -> . expresion MOD expresion
    (39) expresion -> . PARENIZQ expresion PARENDER
    (40) expresion -> . literal
    (41) expresion -> . IDENTIFICADOR
    (42) expresion -> . llamada_funcion_expr
    (43) literal -> . NUMERO
    (44) literal -> . DECIMAL
    (45) literal -> . CADENA
    (46) literal -> . VERDADERO
    (47) literal -> . FALSO
    (48) llamada_funcion_expr -> . IDENTIFICADOR PARENIZQ args PARENDER

    PARENIZQ        shift and go to state 26
    IDENTIFICADOR   shift and go to state 62
    NUMERO          shift and go to state 63
    DECIMAL         shift and go to state 64
    CADENA          shift and go to state 65
    VERDADERO       shift and go to state 40
    FALSO           shift and go to state 41

    expresion                      shift and go to state 71
    literal                        shift and go to state 38
    llamada_funcion_expr           shift and go to state 39

state 33

    (63) sentencia -> BREAK . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 72


state 34

    (64) sentencia -> CONTINUE . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 73


state 35

    (11) tipo -> NUMERO .
    (43) literal -> NUMERO .

    IDENTIFICADOR   reduce using rule 11 (tipo -> NUMERO .)
    PUNTOYCOMA      reduce using rule 43 (literal -> NUMERO .)
    SUMA            reduce using rule 43 (literal -> NUMERO .)
    RESTA           reduce using rule 43 (literal -> NUMERO .)
    MULT            reduce using rule 43 (literal -> NUMERO .)
    DIV             reduce using rule 43 (literal -> NUMERO .)
    MOD             reduce using rule 43 (literal -> NUMERO .)


state 36

    (12) tipo -> DECIMAL .
    (44) literal -> DECIMAL .

    IDENTIFICADOR   reduce using rule 12 (tipo -> DECIMAL .)
    PUNTOYCOMA      reduce using rule 44 (literal -> DECIMAL .)
    SUMA            reduce using rule 44 (literal -> DECIMAL .)
    RESTA           reduce using rule 44 (literal -> DECIMAL .)
    MULT            reduce using rule 44 (literal -> DECIMAL .)
    DIV             reduce using rule 44 (literal -> DECIMAL .)
    MOD             reduce using rule 44 (literal -> DECIMAL .)


state 37

    (14) tipo -> CADENA .
    (45) literal -> CADENA .

    IDENTIFICADOR   reduce using rule 14 (tipo -> CADENA .)
    PUNTOYCOMA      reduce using rule 45 (literal -> CADENA .)
    SUMA            reduce using rule 45 (literal -> CADENA .)
    RESTA           reduce using rule 45 (literal -> CADENA .)
    MULT            reduce using rule 45 (literal -> CADENA .)
    DIV             reduce using rule 45 (literal -> CADENA .)
    MOD             reduce using rule 45 (literal -> CADENA .)


state 38

    (40) expresion -> literal .

    PUNTOYCOMA      reduce using rule 40 (expresion -> literal .)
    SUMA            reduce using rule 40 (expresion -> literal .)
    RESTA           reduce using rule 40 (expresion -> literal .)
    MULT            reduce using rule 40 (expresion -> literal .)
    DIV             reduce using rule 40 (expresion -> literal .)
    MOD             reduce using rule 40 (expresion -> literal .)
    PARENDER        reduce using rule 40 (expresion -> literal .)
    COMA            reduce using rule 40 (expresion -> literal .)


state 39

    (42) expresion -> llamada_funcion_expr .

    PUNTOYCOMA      reduce using rule 42 (expresion -> llamada_funcion_expr .)
    SUMA            reduce using rule 42 (expresion -> llamada_funcion_expr .)
    RESTA           reduce using rule 42 (expresion -> llamada_funcion_expr .)
    MULT            reduce using rule 42 (expresion -> llamada_funcion_expr .)
    DIV             reduce using rule 42 (expresion -> llamada_funcion_expr .)
    MOD             reduce using rule 42 (expresion -> llamada_funcion_expr .)
    PARENDER        reduce using rule 42 (expresion -> llamada_funcion_expr .)
    COMA            reduce using rule 42 (expresion -> llamada_funcion_expr .)


state 40

    (46) literal -> VERDADERO .

    PUNTOYCOMA      reduce using rule 46 (literal -> VERDADERO .)
    SUMA            reduce using rule 46 (literal -> VERDADERO .)
    RESTA           reduce using rule 46 (literal -> VERDADERO .)
    MULT            reduce using rule 46 (literal -> VERDADERO .)
    DIV             reduce using rule 46 (literal -> VERDADERO .)
    MOD             reduce using rule 46 (literal -> VERDADERO .)
    PARENDER        reduce using rule 46 (literal -> VERDADERO .)
    COMA            reduce using rule 46 (literal -> VERDADERO .)


state 41

    (47) literal -> FALSO .

    PUNTOYCOMA      reduce using rule 47 (literal -> FALSO .)
    SUMA            reduce using rule 47 (literal -> FALSO .)
    RESTA           reduce using rule 47 (literal -> FALSO .)
    MULT            reduce using rule 47 (literal -> FALSO .)
    DIV             reduce using rule 47 (literal -> FALSO .)
    MOD             reduce using rule 47 (literal -> FALSO .)
    PARENDER        reduce using rule 47 (literal -> FALSO .)
    COMA            reduce using rule 47 (literal -> FALSO .)


state 42

    (5) funcion -> FUNCION IDENTIFICADOR PARENIZQ lista_params PARENDER . abrir_ambito_funcion bloque cerrar_ambito
    (16) abrir_ambito_funcion -> .

    LLAVEIZQ        reduce using rule 16 (abrir_ambito_funcion -> .)

    abrir_ambito_funcion           shift and go to state 74

state 43

    (9) params_no_vacios -> param COMA . params_no_vacios
    (8) params_no_vacios -> . param
    (9) params_no_vacios -> . param COMA params_no_vacios
    (10) param -> . tipo IDENTIFICADOR
    (11) tipo -> . NUMERO
    (12) tipo -> . DECIMAL
    (13) tipo -> . BOOLEANO
    (14) tipo -> . CADENA

    NUMERO          shift and go to state 17
    DECIMAL         shift and go to state 18
    BOOLEANO        shift and go to state 19
    CADENA          shift and go to state 20

    param                          shift and go to state 15
    params_no_vacios               shift and go to state 75
    tipo                           shift and go to state 16

state 44

    (10) param -> tipo IDENTIFICADOR .

    COMA            reduce using rule 10 (param -> tipo IDENTIFICADOR .)
    PARENDER        reduce using rule 10 (param -> tipo IDENTIFICADOR .)


state 45

    (15) bloque -> LLAVEIZQ sentencias LLAVEDER .

    INICIO          reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    FUNCION         reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    $end            reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    HASTA           reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    SINO            reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    IDENTIFICADOR   reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    SI              reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    MIENTRAS        reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    REPETIR         reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    PARA            reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    MOSTRAR         reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    REGRESA         reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    BREAK           reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    CONTINUE        reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    NUMERO          reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    DECIMAL         reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    BOOLEANO        reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    CADENA          reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    PARENIZQ        reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    VERDADERO       reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    FALSO           reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)
    LLAVEDER        reduce using rule 15 (bloque -> LLAVEIZQ sentencias LLAVEDER .)


state 46

    (20) sentencias -> sentencia sentencias .

    LLAVEDER        reduce using rule 20 (sentencias -> sentencia sentencias .)


state 47

    (21) sentencia -> tipo IDENTIFICADOR . IGUAL expresion PUNTOYCOMA
    (22) sentencia -> tipo IDENTIFICADOR . PUNTOYCOMA

    IGUAL           shift and go to state 76
    PUNTOYCOMA      shift and go to state 77


state 48

    (23) sentencia -> IDENTIFICADOR OP_ASIG . expresion PUNTOYCOMA
    (34) expresion -> . expresion SUMA expresion
    (35) expresion -> . expresion RESTA expresion
    (36) expresion -> . expresion MULT expresion
    (37) expresion -> . expresion DIV expresion
    (38) expresion -> . expresion MOD expresion
    (39) expresion -> . PARENIZQ expresion PARENDER
    (40) expresion -> . literal
    (41) expresion -> . IDENTIFICADOR
    (42) expresion -> . llamada_funcion_expr
    (43) literal -> . NUMERO
    (44) literal -> . DECIMAL
    (45) literal -> . CADENA
    (46) literal -> . VERDADERO
    (47) literal -> . FALSO
    (48) llamada_funcion_expr -> . IDENTIFICADOR PARENIZQ args PARENDER

    PARENIZQ        shift and go to state 26
    IDENTIFICADOR   shift and go to state 62
    NUMERO          shift and go to state 63
    DECIMAL         shift and go to state 64
    CADENA          shift and go to state 65
    VERDADERO       shift and go to state 40
    FALSO           shift and go to state 41

    expresion                      shift and go to state 78
    literal                        shift and go to state 38
    llamada_funcion_expr           shift and go to state 39

state 49
